Added time logging on registration, CSV file generation, and success page

--- a/CareerDayReg/CareerDayReg.css
+++ b/CareerDayReg/CareerDayReg.css
@@ -1,7 +1,10 @@
 /* CSS declarations go here */
-body{ 	background-color:black;
-		color:green;
-	}
+body    {   background-color:black;
+		    color:green;
+	    } 
 
-#alert {	color: red;
-		}
+a   {   color:green;
+    }   
+
+#alert  {	color: red;
+	    }
