--- a/CareerDayReg/CareerDayReg.css
+++ b/CareerDayReg/CareerDayReg.css
@@ -1,9 +1,9 @@
 /* CSS declarations go here */
-body    {   background-color:black;
-		    color:green;
+body    {   background-color:white;
+		    color:black;
 	    } 
 
-a   {   color:green;
+a   {   color:black;
     }   
 
 #alert  {	color: red;
