Added clusters and school editing + other small changes

--- a/CareerDayReg/CareerDayReg.css
+++ b/CareerDayReg/CareerDayReg.css
@@ -31,3 +31,13 @@ a {color:black;
     display: table-cell;
     box-sizing: border-box;
 }
+
+ul {
+    list-style: none;
+}
+
+li {
+    display: block;
+    float: left;
+    padding: 10px;
+}
