--- a/CareerDayReg/CareerDayReg.css
+++ b/CareerDayReg/CareerDayReg.css
@@ -39,8 +39,19 @@ ul {
     list-style: none;
 }
 
-li {
+div {
+    clear: both;
+}
+
+.horizontal li {
     display: block;
     float: left;
     padding: 10px;
+    position: relative;
+}
+
+.vertical li {
+    display: inline-block;
+    padding: 10px;
+    position: relative;
 }
