--- a/CareerDayReg/CareerDayReg.css
+++ b/CareerDayReg/CareerDayReg.css
@@ -55,6 +55,10 @@ div {
     position: relative;
 }
 
+.vertical {
+    display: table-row;
+}
+
 .vertical li {
     display: inline-block;
     padding: 10px;
